--- a/src/assets/base.css
+++ b/src/assets/base.css
@@ -25,6 +25,12 @@
 }
 
 @media (prefers-color-scheme: dark) {
+  :root {
+    --primary-background: var(--very-dark-blue-background);
+    --secondary-background: var(--dark-blue-elements);
+
+    --text-color: var(--white);
+  }
 }
 
 *,
